<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff"
    tools:context=".ProfileActivity">

    <android.support.percent.PercentRelativeLayout
        android:visibility="gone"
        android:id="@+id/percent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">
        <RelativeLayout
            android:layout_width="match_parent"
            app:layout_heightPercent="30%"
            android:background="@drawable/bg_curve"
            android:id="@+id/header"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:id="@+id/iv_banner"
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/logo_round"
                android:scaleType="centerCrop"/>
            <View
                android:id="@+id/vw_transparan"
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_transparan">
            </View>

        </RelativeLayout>
    </android.support.percent.PercentRelativeLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_below="@+id/percent"
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:scrollingCache="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/spacing_middle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/spacing_middle">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_middle"
                    android:layout_marginLeft="@dimen/spacing_mlarge"
                    android:layout_marginRight="@dimen/spacing_mlarge"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:text="@string/label_personal_info"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/grey_90"
                    app:fontFamily="sans-serif-medium" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:minHeight="@dimen/spacing_xxlarge"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/spacing_medium"
                    android:paddingRight="@dimen/spacing_medium">

                    <View
                        android:layout_width="@dimen/spacing_mlarge"
                        android:layout_height="wrap_content" />

                    <ImageButton
                        android:layout_width="@dimen/spacing_xmlarge"
                        android:layout_height="@dimen/spacing_xmlarge"
                        android:background="@android:color/transparent"
                        android:tint="@color/grey_40"
                        app:srcCompat="@drawable/ic_person"
                        tools:ignore="VectorDrawableCompat" />

                    <View
                        android:layout_width="@dimen/spacing_mlarge"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_nama"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/grey_80"
                            app:fontFamily="sans-serif-medium" />

                        <TextView
                            android:id="@+id/txt_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_content_nama"
                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                            android:textColor="@color/grey_40" />

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:minHeight="@dimen/spacing_xxlarge"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/spacing_medium"
                    android:paddingRight="@dimen/spacing_medium">

                    <View
                        android:layout_width="@dimen/spacing_mlarge"
                        android:layout_height="wrap_content" />

                    <ImageButton
                        android:layout_width="@dimen/spacing_xmlarge"
                        android:layout_height="@dimen/spacing_xmlarge"
                        android:background="@android:color/transparent"
                        android:tint="@color/grey_40"
                        app:srcCompat="@drawable/ic_person_outline"
                        tools:ignore="VectorDrawableCompat" />

                    <View
                        android:layout_width="@dimen/spacing_mlarge"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_username"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/grey_80"
                            app:fontFamily="sans-serif-medium" />

                        <TextView
                            android:id="@+id/txt_username"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_content_username"
                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                            android:textColor="@color/grey_40" />

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:minHeight="@dimen/spacing_xxlarge"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/spacing_medium"
                    android:paddingRight="@dimen/spacing_medium">

                    <View
                        android:layout_width="@dimen/spacing_mlarge"
                        android:layout_height="wrap_content" />

                    <ImageButton
                        android:layout_width="@dimen/spacing_xmlarge"
                        android:layout_height="@dimen/spacing_xmlarge"
                        android:background="@android:color/transparent"
                        android:tint="@color/grey_40"
                        app:srcCompat="@drawable/ic_email"
                        tools:ignore="VectorDrawableCompat" />

                    <View
                        android:layout_width="@dimen/spacing_mlarge"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_email_profile"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/grey_80"
                            app:fontFamily="sans-serif-medium" />

                        <TextView
                            android:id="@+id/txt_email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_content_email_profile"
                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                            android:textColor="@color/grey_40" />

                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_large" />

            <View
                android:background="@color/grey_10"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/spacing_large"
                android:paddingBottom="@dimen/spacing_middle">

                <RelativeLayout
                    android:id="@+id/Relative2"
                    android:layout_width="match_parent"
                    android:layout_height="55dp">
                    <LinearLayout
                        android:id="@+id/linear3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/white"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="-10dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:paddingRight="16dp"
                        android:paddingLeft="16dp">
                        <RelativeLayout
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:layout_marginRight="16dp">
                            <de.hdodenhof.circleimageview.CircleImageView
                                android:id="@+id/logout"
                                android:layout_height="40dp"
                                android:layout_width="40dp"
                                android:src="@color/colorBackground2"
                                android:layout_gravity="center"/>
                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                app:srcCompat="@drawable/ic_power"
                                android:layout_centerInParent="true"
                                tools:ignore="VectorDrawableCompat" />
                        </RelativeLayout>
                        <TextView
                            android:id="@+id/txt_logout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/logout"
                            android:textStyle="bold"
                            android:textColor="@color/colorAccent"
                            android:textSize="18sp"/>
                    </LinearLayout>
                    <Button
                        android:id="@+id/btn_logout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_logout"
                        style="?android:attr/borderlessButtonStyle"/>
                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>