<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/content"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:visibility="visible"
        android:id="@+id/progress_master"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/progress"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            style="@style/AVLoadingIndicatorView"
            android:visibility="visible"
            app:indicatorName="BallPulseIndicator"
            app:indicatorColor="@color/colorPrimary"
            />
        <TextView
            android:id="@+id/please_wait"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/progress"
            android:layout_marginTop="5dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorText2"
            android:text="@string/label_please_wait"/>
        <TextView
            android:id="@+id/loading_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/please_wait"
            android:layout_marginTop="3dp"
            android:textSize="14sp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorText3"
            android:text="@string/label_loading_page"/>
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scroll_main"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/menuBottom"
        android:scrollbars="none">

        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/parent_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                android:scrollingCache="true"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        </android.support.design.widget.CoordinatorLayout>

    </ScrollView>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/linear_no_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_10"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/coordinator_lyt"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/bg_image"
                    android:layout_width="match_parent"
                    android:layout_height="380dp"
                    android:layout_alignParentBottom="true"
                    android:src="@drawable/bg_no_item_cactus" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/spacing_xxlarge"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_medium"
                        android:lineSpacingExtra="@dimen/spacing_middle"
                        android:text="There is no data \nAll of your data will appear here"
                        android:gravity="center"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textColor="@color/grey_60" />
                </LinearLayout>

            </RelativeLayout>

        </android.support.design.widget.CoordinatorLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menuBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/bg_gradient_soft" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#FFFFFF"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/spacing_medium">

                <ImageButton
                    android:id="@+id/img_btn_inbox"
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:tint="@color/colorPrimary"
                    app:srcCompat="@drawable/ic_inbox"
                    tools:ignore="VectorDrawableCompat" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_inbox"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:layout_width="?attr/actionBarSize"
                android:layout_height="0dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/spacing_medium">

                <ImageButton
                    android:id="@+id/img_btn_history"
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:tint="@color/colorPrimary"
                    app:srcCompat="@drawable/ic_baseline_history"
                    tools:ignore="VectorDrawableCompat" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_history"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_open_shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="15dp"
        android:clickable="true"
        android:tint="@android:color/white"
        app:backgroundTint="@color/colorPrimary"
        app:elevation="2dp"
        app:fabSize="normal"
        app:rippleColor="@color/deep_orange_400"
        app:srcCompat="@drawable/ic_baseline_storefront"
        tools:ignore="VectorDrawableCompat" />
</RelativeLayout>